LOW / change deprecated use of constructor Boolean